# ropes-league-2023

./: .env  .gitignore  pyproject.toml
notebooks/: gsheets.ipynb  individual.ipynb  scoring.ipynb  stats.ipynb
ropes_league/: __init__.py  league_data.py  scoring.py
ropes_league/db/: climber.py  team.py
ropes_league/individual/: league_data.py
ropes_league/teams/: league_data.py  scoring.py
