[tool.poetry]
name = "ropes-league"
version = "0.1.0"
description = ""
authors = ["Zack Drescher <zackryandrescher@gmail.com>"]
readme = "README.md"
packages = [{include = "ropes_league"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
