[tool.poetry]
name = "ropes-league"
version = "0.1.0"
description = ""
authors = ["Zack Drescher <zackryandrescher@gmail.com>"]
readme = "README.md"
packages = [{include = "ropes_league"}]

[tool.poetry.dependencies]
python = "^3.8"
gspread = "^5.7.2"
python-dotenv = "^0.21.0"
pandas = "^1.5.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ipykernel = "^6.19.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
